--- a/public/src/Item/Item.css
+++ b/public/src/Item/Item.css
@@ -1,8 +1,8 @@
 .Item {
-	  width: 15vw;
-    height: 18vw;
-    border: 0.3vw solid gray;
-    margin: 3vw;
+	width: 15vw;
+	height: 18vw;
+	border: 0.3vw solid gray;
+	margin: 3vw;
 }
 
 .Item:hover {
@@ -16,14 +16,15 @@
 .Item_name {
 	text-transform: capitalize;
 	font-weight: 600;
-	font-size: 2.3vw;
+	font-size: 2vw;
 	margin: 0;
+	margin-bottom: -3vw;
 }
 
 .Type_wrapper{
-		display: flex;
-		flex-direction: row;
-		margin: 1vw;
-		padding: 0.5vw;
+	display: flex;
+	flex-direction: row;
+	margin: 0.5vw;
+	padding: 0.5vw;
 }
 
