New filter and responsivness

--- a/public/src/App.css
+++ b/public/src/App.css
@@ -26,7 +26,8 @@
 	border-radius: 0.5vw;
 	color: white;
 	margin: 0 auto;
-	margin-bottom: 10vw;
+	margin-top: 5vw;
+  margin-bottom: 5vw;
 	font-size: 2vw;
 	font-weight: 600;
  }
