--- a/public/src/Item/Item.css
+++ b/public/src/Item/Item.css
@@ -10,21 +10,22 @@
 }
 
 .Item_img {
-	width: 10vw;
+	width: 9vw;
 }
 
 .Item_name {
 	text-transform: capitalize;
 	font-weight: 600;
 	font-size: 2vw;
-	margin: 0;
-	margin-bottom: -3vw;
+	margin-bottom: 1vw;
+	margin-top: 0vw;
 }
 
 .Type_wrapper{
 	display: flex;
 	flex-direction: row;
-	margin: 0.5vw;
-	padding: 0.5vw;
+	justify-content: center;
+	margin-left: 0.5vw;
+	padding-left: 0.5vw;
 }
 
