--- a/public/src/Pokemon/Pokemon.css
+++ b/public/src/Pokemon/Pokemon.css
@@ -25,3 +25,32 @@ table, th, td {
 	font-weight: 600;
 	text-transform: capitalize;
 }
+
+@media screen and (max-width: 768px) { 
+	.Pokemon {
+		margin: 1vw;
+    margin-top: 0;
+    width: 30vw;
+    height: 50vw;
+    border: 2px solid black;
+    position: fixed;
+	}
+
+	.Pokemon_image {
+		width: 15vw;
+	}
+
+	table, th, td {
+		border: 1px solid black;
+		border-collapse: collapse;
+		margin: 2vw;
+	}
+
+	.Pokemon_table td {
+		width: 15vw;
+    height: 1.5vw;
+    font-size: 2vw;
+    font-weight: 600;
+    text-transform: capitalize;
+	}
+}
